# math3090

./: README.md
assignments/assignment1/: .gitignore  root.aux  root.out
assignments/assignment1/data/: table1-1.txt  table2-1.txt  table2-2.txt  table2-3.txt
assignments/assignment1/example-code/: TempOfCoffee.m  TempOfCoffee_BkEuler.m  TempOfCoffee_ImpEuler.m  TempOfCoffee_u.m  main_Euler.m  main_ImpEuler.m  main_coffee.m
assignments/assignment1/figures/: figure1-1.eps  figure1-1.gp  figure1-1.tex  figure2-1.eps  figure2-1.gp  figure2-1.tex  figure2-2.eps  figure2-2.gp  figure2-2.tex  figure2-3.eps  figure2-3.gp  figure2-3.tex
assignments/assignment1/latex/: root.tex
assignments/assignment1/src/: .ycm_extra_conf.py  CMakeLists.txt
assignments/assignment1/src/coffee/: CMakeLists.txt  ChangingRoomTemp.cpp  ChangingRoomTemp.hpp  Common.cpp  Common.hpp  Main.cpp  WhenToAddMilk.cpp  WhenToAddMilk.hpp
